--- a/ThongKe/Views/BaoCao/KhachHuy.cshtml
+++ b/ThongKe/Views/BaoCao/KhachHuy.cshtml
@@ -1,29 +1,13 @@
 ﻿@model KhachHuyViewModel
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1>THỐNG KÊ HỦY ĐOÀN</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Thống Kê Hủy Đoàn</li>
-                </ol>
-            </div>
-        </div>
-    </div><!-- /.container-fluid -->
-</section>
 
 
 <!-- Main content -->
-<section class="content">
+<section class="content pt-2">
 
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-search text-info"></i> Tìm Kiếm</h3>
+            <h3 class="card-title text-bold">THỐNG KÊ HỦY ĐOÀN</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -34,79 +18,52 @@
                 </button>
             </div>
         </div>
-        <div class="card-body">
+        <div class="card-body p-2">
 
 
             <form id="formSearch" autocomplete="off">
-                <div class="p-4 border rounded">
+                @*<div class="p-4 border rounded">*@
 
                     <div class="form-group row">
                         
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Từ ngày
-                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
+                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control form-control-sm maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Đến ngày
-                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
+                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control form-control-sm maskInput" id="txtDenNgay" />
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Chi nhánh
-                            <select name="chiNhanh" class="form-control border-input ddlChiNhanh" id="ddlChiNhanh"
+                            <select name="chiNhanh" class="form-control form-control-sm border-input ddlChiNhanh" id="ddlChiNhanh"
                                     asp-items="@(new SelectList(Model.ChiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
                             </select>
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Khối
-                            <select class="form-control" id="ddlKhoi" name="khoi"
+                            <select class="form-control form-control-sm" id="ddlKhoi" name="khoi"
                                     asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             <br />
-                            <span class="btn-group">
-                                <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/KhachHuy"><i class="fa fa-search"></i></button>
-                                <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/KhachHuyPost"><i class="fas fa-file-export"></i></button>
+                            <span class="btn-group btn-block">
+                                <button type="submit" id="btnSearch" class="btn btn-outline-primary btn-sm" formaction="/BaoCao/KhachHuy"><i class="fa fa-search"></i></button>
+                                <button type="submit" id="btnExportAll1" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/KhachHuyPost"><i class="fas fa-file-export"></i></button>
                             </span>
                         </div>
 
                     </div>
 
 
-                </div>
-
+                @*</div>
+*@
             </form>
-
-        </div>
-        <!-- /.card-body -->
-
-    </div>
-    <!-- /.card -->
-
-</section>
-<!-- /.content -->
-<!-- Main content -->
-<section class="content">
-
-    <!-- Default box -->
-    <div class="card">
-        <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-list-alt text-info"></i> Danh Sách</h3>
-
-            <div class="card-tools">
-                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        </div>
-        <div class="card-body">
             <div style="overflow-x:auto;">
                 <table class="table mytable text-nowrap" id="listAll">
                     <thead>
@@ -162,20 +119,14 @@
                 </table>
             </div>
 
-
         </div>
         <!-- /.card-body -->
-        <div class="card-footer">
 
-        </div>
-        <!-- /.card-footer-->
     </div>
     <!-- /.card -->
 
 </section>
 <!-- /.content -->
-
-
 
 
 @section Scripts{
