--- a/ThongKe/Views/BaoCao/KinhDoanhOnlineNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/KinhDoanhOnlineNgayDi.cshtml
@@ -1,20 +1,4 @@
 ﻿@model ThongKeWebViewModel
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1>BÁO CÁO DOANH THU ONLINE THEO NGÀY ĐI TOUR</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Doanh Thu Online Theo Ngày Đi Tour</li>
-                </ol>
-            </div>
-        </div>
-    </div><!-- /.container-fluid -->
-</section>
 
 
 <!-- Main content -->
@@ -23,7 +7,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-search text-info"></i> Tìm Kiếm</h3>
+            <h3 class="card-title text-bold">BÁO CÁO DOANH THU ONLINE THEO NGÀY ĐI TOUR</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -42,28 +26,28 @@
 
                     <div class="form-group row">
                         
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Từ ngày
-                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
+                            <input value="@ViewBag.searchFromDate" name="tungay" class="form-control form-control-sm maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Đến ngày
-                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
+                            <input value="@ViewBag.searchToDate" name="denngay" class="form-control form-control-sm maskInput" id="txtDenNgay" />
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             Khối
-                            <select class="form-control" id="ddlKhoi" name="khoi"
+                            <select class="form-control form-control-sm" id="ddlKhoi" name="khoi"
                                     asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-2">
+                        <div class="col-md-2">
                             <br />
-                            <span class="btn-group">
-                                <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/KinhDoanhOnlineNgayDi"><i class="fa fa-search"></i></button>
-                                <button type="submit" id="btnSearch" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/KinhDoanhOnlineNgayDiPost"><i class="fas fa-file-export"></i></button>
+                            <span class="btn-group btn-block">
+                                <button type="submit" id="btnSearch" class="btn btn-outline-primary btn-sm" formaction="/BaoCao/KinhDoanhOnlineNgayDi"><i class="fa fa-search"></i></button>
+                                <button type="submit" id="btnSearch" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/KinhDoanhOnlineNgayDiPost"><i class="fas fa-file-export"></i></button>
                             </span>
                         </div>
 
@@ -73,33 +57,6 @@
                 </div>
 
             </form>
-
-        </div>
-        <!-- /.card-body -->
-
-    </div>
-    <!-- /.card -->
-
-</section>
-<!-- /.content -->
-<!-- Main content -->
-<section class="content">
-
-    <!-- Default box -->
-    <div class="card">
-        <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-list-alt text-info"></i> Danh Sách</h3>
-
-            <div class="card-tools">
-                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        </div>
-        <div class="card-body">
             <div style="overflow-x:auto;">
                 <table class="table mytable text-nowrap" id="listAll">
                     <thead>
@@ -145,20 +102,14 @@
                 </table>
             </div>
 
-
         </div>
         <!-- /.card-body -->
-        <div class="card-footer">
 
-        </div>
-        <!-- /.card-footer-->
     </div>
     <!-- /.card -->
 
 </section>
 <!-- /.content -->
-
-
 
 
 @section Scripts{
