--- a/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
@@ -493,7 +493,7 @@
                                             <td class="tdVal" data-id="@item.Idtour">@Html.DisplayFor(m => item.Chudetour)</td>
                                             <td class="tdVal" data-id="@item.Idtour">@Html.DisplayFor(m => item.Tuyentq)</td>
                                             <td class="tdVal" data-id="@item.Idtour">@Html.Raw(item.Sokhachdk.HasValue ? item.Sokhachdk.Value.ToString("N0") : "0")</td>
-                                            <td class="tdVal" data-id="@item.Idtour">@Html.Raw(item.Doanhthudk.HasValue? item.Doanhthudk.Value.ToString("N0"):"0"))</td>
+                                            <td class="tdVal" data-id="@item.Idtour">@Html.Raw(item.Doanhthudk.HasValue? item.Doanhthudk.Value.ToString("N0"):"0")</td>
                                             <td class="tdVal" data-id="@item.Idtour">@Html.Raw(item.Sokhachtt.HasValue ? item.Sokhachtt.Value.ToString("N0") : "0")</td>
                                             <td class="tdVal" data-id="@item.Idtour">@Html.Raw(item.Doanhthutt.HasValue ? item.Doanhthutt.Value.ToString("N0") : "0")</td>
                                             <td class="tdVal" data-id="@item.Idtour">@Html.DisplayFor(m => item.Nguoitao)</td>
