--- a/ThongKe/Views/BaoCao/DoanhSoTheoThang.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoThang.cshtml
@@ -73,7 +73,7 @@
 
                         <div class="col-md-2">
                             <label class="control-label">Khối</label>
-                            <select class="form-control form-control-sm" name="khoi"
+                            <select class="form-control " name="khoi"
                                     asp-items="@(new SelectList(Model.Khois_KD, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
