--- a/ThongKe/Views/BaoCao/DoanhSoTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoNgayDi.cshtml
@@ -87,7 +87,7 @@
                                     asp-items="@(new SelectList(Model.Loaitours, "Tenloaitour", "Tenloaitour", ViewBag.loaiTour))">
                             </select>
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             <label>Chi nhánh</label>
                             <select class="form-control form-control-sm" name="Macn"
                                     asp-items="@(new SelectList(Model.Dmchinhanhs, "Macn", "Macn", ViewBag.Macn))">
@@ -101,7 +101,7 @@
                             </select>
                         </div>
 
-                        <div class="col-md-2 text-sm">
+                        <div class="col-md-1 text-sm">
                             <label>&nbsp;</label>
                             <div class=" btn-block btn-group">
                                 <button type="submit" class="btn btn-outline-primary btn-sm" id="btnSubmitSearch" formaction="/BaoCao/DoanhSoTheoNgayDi" formmethod="get" title="Search"><i class="fas fa-search"></i></button>
@@ -168,14 +168,10 @@
                                         <td class="tdVal" data-id="@item.Id">@Html.Raw(item.NgayDen.ToString("dd/MM/yyyy"))</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.Raw(item.NgayDi.ToString("dd/MM/yyyy"))</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.TuyenTQ)</td>
-                                        <td class="tdVal" data-id="@item.Id">@Html.Raw(item.SoKhachTT == 0) ? item.Sokhachdk.Value.ToString("N0") : item.SoKhachTT.ToString("N0"))</td>
-                                        <td class="tdVal" data-id="@item.Id">@Html.Raw(item.DoanhThuTT == 0) ? item.DoanhThuDk.Value.ToString("N0") : item.DoanhThuTT.ToString("N0"))</td>
+                                        <td class="tdVal" data-id="@item.Id">@Html.Raw(item.SoKhachTT.ToString("N0"))</td>
+                                        <td class="tdVal" data-id="@item.Id">@Html.Raw(item.DoanhThuTT.ToString("N0"))</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.NguoiTao)</td>
-                                        <td class="tdVal" data-id="@item.Id">
-                                            <select class="form-control form-control-sm border-input "
-                                        asp-items="@(new SelectList(Model.Companies,"CompanyId","Name", item.CompanyId))">
-                                            </select>
-                                        </td>
+                                        <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.TenKh)</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.TenLoaiTour)</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.DisplayFor(m => item.NguonTour)</td>
                                         <td class="tdVal" data-id="@item.Id">@Html.Raw(item.NgayTao.ToString("dd/MM/yyyy"))</td>
