--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -113,6 +113,12 @@
                                 </a>
                             </li>
                             <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoNgayBan" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Tuyến tham quan theo ngày bán tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoQuy" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Tuyến tham quan theo quý</p>
