--- a/ThongKe/Views/BaoCao/TuyentqTheoNgayBan.cshtml
+++ b/ThongKe/Views/BaoCao/TuyentqTheoNgayBan.cshtml
@@ -1,4 +1,4 @@
-﻿@model TuyentqTheoNgayDiViewModel
+﻿@model TuyentqTheoNgayBanViewModel
 
 <!-- Main content -->
 <section class="content pt-2">
@@ -70,22 +70,21 @@
                         <tr class="table-info">
                             <th>#</th>
                             <th>STT</th>
+                            <th>Tuyến Tq</th>
                             <th>Code CN</th>
-                            <th>Tuyến tham quan</th>
-                            <th>Khách HT</th>
-                            <th>Thực thu HT</th>
-                            <th>Khách cũ</th>
-                            <th>Thực thu cũ</th>
+                            <th>Tổng tiền</th>
+                            <th>Doanh số</th>
 
                         </tr>
                     </thead>
                     <tbody>
-                        @if (Model.TuyentqNgaydis != null)
+                        @if (Model.TuyenTqTheoNgayBans != null)
                         {
-                            @foreach (var item in Model.TuyentqNgaydis)
+                            @foreach (var item in Model.TuyenTqTheoNgayBans)
                             {
                                 <tr>
                                     <td>
+
                                         <form id="frmDetail" asp-action="TuyentqTheoNgayBanChiTietToExcel">
                                             <input type="hidden" name="tungay" id="hidTuNgay" value="@Model.TuNgay" />
                                             <input type="hidden" name="denngay" id="hidDenNgay" value="@Model.DenNgay" />
@@ -97,27 +96,10 @@
                                         </form>
                                     </td>
                                     <td>@Html.DisplayFor(m => item.Stt)</td>
-                                    <td>@Html.DisplayFor(m => item.Chinhanh)</td>
                                     <td>@Html.DisplayFor(m => item.Tuyentq)</td>
-                                    <td>@Html.DisplayFor(m => item.Khachht)</td>
-                                    @if (item.Thucthuht.HasValue)
-                                    {
-                                        <td>@Html.Raw(item.Thucthuht.Value.ToString("N0"))</td>
-                                    }
-                                    else
-                                    {
-                                        <td>0</td>
-                                    }
-
-                                    <td>@Html.DisplayFor(m => item.Khachcu)</td>
-                                    @if (item.Thucthucu.HasValue)
-                                    {
-                                        <td>@Html.Raw(item.Thucthucu.Value.ToString("N0"))</td>
-                                    }
-                                    else
-                                    {
-                                        <td>0</td>
-                                    }
+                                    <td id="tdChiNhanh">@Html.DisplayFor(m => item.Chinhanh)</td>
+                                    <td>@Html.Raw(item.Doanhso.Value.ToString("N0"))</td>
+                                    <td>@Html.Raw(item.Thucthu.Value.ToString("N0"))</td>
 
                                 </tr>
                             }
