--- a/ThongKe/Views/Users/Create.cshtml
+++ b/ThongKe/Views/Users/Create.cshtml
@@ -213,6 +213,12 @@
 
     }
     <script>
+        
+        //Initialize Select2 Elements
+        $('.select2bs4').select2({
+            theme: 'bootstrap4'
+        })
+
         $('.phongBans').select2({
 
             theme: 'bootstrap4'
@@ -244,3 +250,64 @@
 
 }
 
+                               
+<div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+            <label>Minimal</label>
+            <select class="form-control select2bs4" style="width: 100%;">
+                <option selected="selected">Alabama</option>
+                <option>Alaska</option>
+                <option>California</option>
+                <option>Delaware</option>
+                <option>Tennessee</option>
+                <option>Texas</option>
+                <option>Washington</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label>Disabled</label>
+            <select class="form-control select2bs4" disabled="disabled" style="width: 100%;">
+                <option selected="selected">Alabama</option>
+                <option>Alaska</option>
+                <option>California</option>
+                <option>Delaware</option>
+                <option>Tennessee</option>
+                <option>Texas</option>
+                <option>Washington</option>
+            </select>
+        </div>
+
+    </div>
+
+    <div class="col-md-6">
+        <div class="form-group">
+            <label>Multiple</label>
+            <select class="select2bs4" multiple="multiple" data-placeholder="Select a State" style="width: 100%;">
+                <option>Alabama</option>
+                <option>Alaska</option>
+                <option>California</option>
+                <option>Delaware</option>
+                <option>Tennessee</option>
+                <option>Texas</option>
+                <option>Washington</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label>Disabled Result</label>
+            <select class="form-control select2bs4" style="width: 100%;">
+                <option selected="selected">Alabama</option>
+                <option>Alaska</option>
+                <option disabled="disabled">California (disabled)</option>
+                <option>Delaware</option>
+                <option>Tennessee</option>
+                <option>Texas</option>
+                <option>Washington</option>
+            </select>
+        </div>
+
+    </div>
+
+</div>
