--- a/ThongKe/Views/BaoCao/QuayTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/QuayTheoNgayDi.cshtml
@@ -71,6 +71,7 @@
                             <span class="btn-group btn-block">
                                 <button type="submit" id="btnSearch" class="btn btn-outline-primary btn-sm" formaction="/BaoCao/QuayTheoNgayDi"><i class="fa fa-search"></i></button>
                                 <button type="submit" id="btnExportAll1" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/QuayTheoNgayDiPost"><i class="fas fa-file-export"></i></button>
+                            @*<button type="submit" id="btnQuayTheoNgayDiChiTietToExcel_All" class="btn btn-outline-success btn-sm" formmethod="post" formaction="/BaoCao/QuayTheoNgayDiChiTietToExcel_All"><i class="fas fa-file-excel"></i></button>*@
                             </span>
                         </div>
 
