--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -130,6 +130,12 @@
                                     <p>Quầy khách lẽ toàn hệ thống</p>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoLoaiTour" class="nav-link"> <!--Sự kiện-->
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Sale theo sự kiện</p>
+                                </a>
+                            </li>
 
                             <li class="nav-item">
                                 <a asp-area="" asp-controller="BaoCao" asp-action="KhachHuy" class="nav-link text-danger">
