--- a/ThongKe/Views/BaoCao/SaleTheoLoaiTour.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoLoaiTour.cshtml
@@ -11,7 +11,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title text-bold">BÁO CÁO DOANH THU THEO LOẠI TOUR</h3> <!--SU KIEN-->
+            <h3 class="card-title text-bold">BÁO CÁO DOANH THU THEO SỰ KIỆN</h3> <!--SU KIEN-->
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
